clusters/oke/default/wai/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wai-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wai
  template:
    metadata:
      labels:
        app: wai
    spec:
      containers:
        - name: wai
          image: containous/whoami:v1.5.0 # {"$imagepolicy": "default:wai"}
          resources:
            requests:
              memory: '64Mi'
              cpu: '0.1'
            limits:
              memory: '64Mi'
              cpu: '0.1'
