clusters/oke/default/wai/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wai-srv
  namespace: default
spec:
  selector:
    app: wai
  ports:
    - name: wai
      protocol: TCP
      port: 80
      targetPort: 80
