clusters/oke/default/wai/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wai-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  tls:
    - hosts:
        - oke.harrytang.com
      secretName: wai-cert-tls
  rules:
    - host: oke.harrytang.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wai-srv
                port:
                  number: 80
